--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,8 @@
 @import './assets/SCSS/general.scss';
 @import './assets/SCSS/components/spinner.scss';
-@import './assets/SCSS/pages/catalog.scss'
+@import './assets/SCSS/components/search.scss';
+@import './assets/SCSS/components/catalog.scss';
+@import './assets/SCSS/components/filter.scss';
+@import './assets/SCSS/components/sorting.scss';
+@import './assets/SCSS/components/title.scss';
+@import './assets/SCSS/pages/pageCatalog.scss';
