--- a/src/assets/SCSS/components/catalog.scss
+++ b/src/assets/SCSS/components/catalog.scss
@@ -13,6 +13,11 @@
         display: flex;
         flex-direction: column;
 
+        &__link {
+            display: flex;
+            color: inherit;
+            text-decoration: none;
+        }
         &__img {
             height: 200px;
             
