Сделала список элементов для фильтра и подправила JSON

--- a/src/assets/SCSS/components/filter.scss
+++ b/src/assets/SCSS/components/filter.scss
@@ -14,6 +14,7 @@
       display: flex;
       align-items: center;
       gap: 5px;
+      width: fit-content;
 
       &:hover {
         opacity: 0.5;
