--- a/src/assets/SCSS/components/filter.scss
+++ b/src/assets/SCSS/components/filter.scss
@@ -41,5 +41,23 @@
   }
   .spinner {
     border: 4px solid #fff;
+    border-top: 4px solid #f9f9f97d;
+  }
+  &-item {
+
+    &__active {
+      opacity: 0.5;
+    }
+  }
+  &-reset {
+    font-size: 16px;
+    cursor: pointer;
+    border-bottom: 1px dotted;
+    margin-top: 20px;
+    transition: $transition;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 }
