--- a/src/assets/SCSS/components/ui.scss
+++ b/src/assets/SCSS/components/ui.scss
@@ -1,13 +1,13 @@
 .show-hide-btn {
-  border-radius: 100px;
+  border-radius: $br-btn;
   padding: 10px 15px;
   font-size: 16px;
-  border: 2px solid #fff;
+  border: 2px solid $white;
   background-color: transparent;
   cursor: pointer;
   transition: background-color 0.5s ease;
   
   &:hover {
-    background-color: #fff;
+    background-color: $white;
   }
 }
