--- a/src/assets/SCSS/variables.scss
+++ b/src/assets/SCSS/variables.scss
@@ -1,4 +1,13 @@
+// colors
 $grey: #E9E9E9;
 $black: #000000;
 $pink: #f7dee8;
+$white: #fff;
+
+// another
 $transition: opacity 0.5s ease;
+$br-btn: 100px;
+
+// media
+$notebook: 'max-width: 1200px';
+$mobile: 'max-width: 768px';
