--- a/src/assets/SCSS/components/catalog.scss
+++ b/src/assets/SCSS/components/catalog.scss
@@ -22,6 +22,13 @@
                 top: 20px;
             }
         }
+        @media ($notebook) {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+        }
+        @media ($mobile) {
+            grid-template-columns: 1fr;
+        }
     }
     &.string {
         grid-template-columns: 1fr;
