--- a/src/assets/SCSS/pages/pageCatalog.scss
+++ b/src/assets/SCSS/pages/pageCatalog.scss
@@ -1,3 +1,10 @@
+@import '../variables.scss';
+
+$catalog: ".catalog";
+$filter: ".filter";
+$search: ".search";
+$sorting: ".sorting";
+
 .flex-wrapper {
   display: flex;
   justify-content: space-between;
@@ -5,17 +12,354 @@
   margin-bottom: 20px;
   flex-wrap: wrap;
   gap: 15px;
+
+  @media ($mobile) {
+    margin-bottom: 15px;
+  }
 }
 
 .page {
   display: flex;
   gap: 50px;
   margin-bottom: 50px;
-  
+
   @media ($notebook) {
-    gap: 20px;
+    gap: 15px;
   }
+
   @media ($mobile) {
     flex-direction: column;
+  }
+}
+
+#{$catalog} {
+  display: grid;
+
+  &.grid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px 20px;
+    height: fit-content;
+
+    #{$catalog}-item {
+      flex-direction: column;
+
+      &__img {
+
+
+        &-wrapper {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+        }
+      }
+
+      &__icon {
+        top: 20px;
+
+        @media ($mobile) {
+          top: 15px;
+        }
+      }
+    }
+
+    @media ($notebook) {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 15px;
+    }
+
+    @media ($mobile) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &.string {
+    grid-template-columns: 1fr;
+    gap: 15px;
+
+    #{$catalog}-item {
+      &__icon {
+        bottom: 20px;
+
+        @media ($mobile) {
+          bottom: 15px;
+        }
+      }
+
+      &__link {
+        height: fit-content;
+      }
+    }
+  }
+
+  &-item {
+    padding: 20px;
+    border-radius: 10px;
+    border: 1px solid $grey;
+    position: relative;
+    transition: box-shadow 0.5s ease;
+    cursor: pointer;
+    display: flex;
+    width: 100%;
+    gap: 15px;
+
+    @media ($mobile) {
+      padding: 15px 10px;
+    }
+
+    &__link {
+      display: flex;
+      color: inherit;
+      text-decoration: none;
+    }
+
+    &__img {
+      height: 200px;
+
+      &-wrapper {
+        display: flex;
+        justify-content: center;
+      }
+
+      @media ($mobile) {
+        height: 150px;
+      }
+    }
+
+    &__icon {
+      position: absolute;
+      padding: 10px;
+      border-radius: 10px;
+      background-color: $pink;
+      right: 20px;
+      cursor: pointer;
+      transition: $transition;
+
+      &:hover {
+        opacity: 0.5;
+      }
+
+      @media ($mobile) {
+        right: 15px;
+      }
+    }
+
+    &__title {
+      margin: 0;
+      margin-bottom: 15px;
+      font-size: 21px;
+
+      @media ($mobile) {
+        margin-bottom: 10px;
+        font-size: 18px;
+      }
+    }
+
+    &__descr {
+      margin-bottom: 15px;
+
+      @media ($notebook) {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        margin-bottom: 10px;
+      }
+    }
+
+    &__price {
+      font-size: 25px;
+      margin-top: auto;
+
+      @media ($mobile) {
+        font-size: 20px;
+      }
+    }
+
+    &:hover {
+      box-shadow: 1px 6px 23px 7px rgba(0, 0, 0, 0.2);
+    }
+  }
+}
+
+#{$filter} {
+  background-color: $pink;
+  border-radius: 10px;
+  padding: 0 15px;
+  padding-bottom: 30px;
+  height: 100%;
+  width: 250px;
+  flex-shrink: 0;
+
+  &__wrapper {
+    display: flex;
+    height: fit-content;
+  }
+
+  &-list {
+    padding-left: 15px;
+    max-height: 70px;
+    overflow: hidden;
+    transition: max-height 0.5s ease;
+
+    li {
+      list-style: none;
+      transition: $transition;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      gap: 5px;
+      width: fit-content;
+
+      &:hover {
+        opacity: 0.5;
+      }
+
+      svg.down {
+        transform: rotate(180deg);
+      }
+    }
+
+    @media ($mobile) {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      max-height: max-content;
+    }
+  }
+
+  &-sorting {
+    width: inherit;
+
+    &.show-all {
+
+      .filter-list {
+        max-height: 2100px;
+      }
+
+    }
+  }
+
+  .spinner {
+    border: 4px solid $white;
+    border-top: 4px solid #f9f9f97d;
+  }
+
+  &-item {
+
+    &__active {
+      opacity: 0.5;
+    }
+  }
+
+  &-reset {
+    font-size: 16px;
+    cursor: pointer;
+    border-bottom: 1px dotted;
+    margin-top: 20px;
+    transition: $transition;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+
+  @media ($notebook) {
+    width: 200px;
+  }
+
+  @media ($mobile) {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: calc(100% - 30px);
+    height: auto;
+    border-radius: 0px;
+    transition: $transition, z-index 0.5s ease;
+
+    &.active {
+      opacity: 1;
+      z-index: 2;
+    }
+  }
+}
+
+#{$filter}mob {
+  background-color: $pink;
+  text-align: left;
+  padding: 10px 15px;
+  width: fit-content;
+  border-radius: $br-btn;
+  font-size: 16px;
+
+  &__close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
+
+  &__btns {
+    position: fixed;
+    z-index: 3;
+    right: 15px;
+    bottom: 15px;
+    display: flex;
+    gap: 15px;
+
+    button {
+      font-size: 16px;
+      margin: 0;
+      background-color: $white;
+      padding: 10px 15px;
+      border-radius: $br-btn;
+      border-bottom: none;
+    }
+  }
+}
+
+#{$search} {
+
+  &-input {
+    width: 300px;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid $grey;
+    cursor: pointer;
+
+    @media ($mobile) {
+      width: calc(100% - 20px);
+    }
+  }
+
+  @media ($mobile) {
+    width: 100%;
+  }
+}
+
+#{$sorting} {
+  display: flex;
+  gap: 15px;
+
+  &-btn {
+    border-radius: 5px;
+    background-color: $pink;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    cursor: pointer;
+
+    svg {
+      fill: $black;
+      transition: $transition;
+    }
+
+    &:hover {
+
+      svg {
+        opacity: 0.5;
+      }
+    }
   }
 }
