--- a/src/assets/SCSS/variables.scss
+++ b/src/assets/SCSS/variables.scss
@@ -7,7 +7,9 @@ $white: #fff;
 // another
 $transition: opacity 0.5s ease;
 $br-btn: 100px;
+$lh: 120%;
 
 // media
 $notebook: 'max-width: 1200px';
 $mobile: 'max-width: 768px';
+$mini-mobile: 'max-width: 470px';
