--- a/src/assets/SCSS/pages/pageCatalog.scss
+++ b/src/assets/SCSS/pages/pageCatalog.scss
@@ -1,5 +1,3 @@
-@import '../variables.scss';
-
 $catalog: ".catalog";
 $filter: ".filter";
 $search: ".search";
@@ -184,7 +182,7 @@ $sorting: ".sorting";
 #{$filter} {
   background-color: $pink;
   border-radius: 10px;
-  padding: 0 15px;
+  padding: 15px;
   padding-bottom: 30px;
   height: 100%;
   width: 250px;
@@ -263,6 +261,10 @@ $sorting: ".sorting";
     }
   }
 
+  &-title {
+    margin-bottom: 10px;
+  }
+
   @media ($notebook) {
     width: 200px;
   }
@@ -280,7 +282,7 @@ $sorting: ".sorting";
 
     &.active {
       opacity: 1;
-      z-index: 2;
+      z-index: 11;
     }
   }
 }
