добавлен компонент баннер (главная)

--- a/src/assets/SCSS/general.scss
+++ b/src/assets/SCSS/general.scss
@@ -32,7 +32,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
-    height: 100%;
+    min-height: inherit;
 }
 
 #{$wrapper} {
