--- a/src/main.scss
+++ b/src/main.scss
@@ -4,3 +4,4 @@
 @import './assets/SCSS/ui.scss';
 @import './assets/SCSS/navigation.scss';
 @import './assets/SCSS/pages/pageCatalog.scss';
+@import './assets/SCSS/pages/pageMain.scss'
